fix: add fz for input, textarea and select to remove zoom effect on ios devices and fix stars on reviews

--- a/styles/style.css
+++ b/styles/style.css
@@ -105,6 +105,7 @@ input, textarea, select {
     outline: none;
     border: none;
     box-shadow: none;
+    font-size: 16px;
 }
 
 select,
